--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="bingWallpaper" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\bingWallpaper.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="computerRepairCentre" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons\computerRepairCentre.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="computerRepairCentreIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>computerRepairCentreIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
