--- a/PlutoPoint Installer.resx
+++ b/PlutoPoint Installer.resx
@@ -121,21 +121,41 @@
   <data name="restartCheck.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAAzpJREFUOE9dU2tQzHEUPRnMeCQaxmMsBuP1wZT1+EJsE1ETJS3DtFFWERXGq2YV
-        DYnIIj22Um02oagdtNlS2yptNKRFkjavHqOW3dI0G9f88sdyZv5zv/zuuefc/7nAXwwFMB7AbAAOABYC
-        WMLVWQAmABgGYJBVzx/YBAUF3cm7VVDTZTRSd3c39fX1kcVioagTsd2JsvT3csU1hZubuweASdywfzBc
-        KBRKDkVIDIaWd9Te0UFfTSbq7e0lkb+YYs9KSf2gnBrfNFmKVMXJAGZakwxmEvNvFxY+0j2muno9e0gf
-        Pn6izq4u4i9a0urm4dkYtDusQaUuNb57/4HUJaVpAHi/7YzZu29/eOGde1Rc8oAqHlbRhcspVHS/5Eez
-        oYUm86bs8BFuTA0IDDb6bttO0afinr1tNvSHhIaJAIxkBDMSkmRFOdfzKO+2ktKzrlLAdjH5+Qd802gr
-        qznP452cnLZGnYg1H5Yco0tJqbWVVY8KAUwGj8dbmpohb8jIzqHsnOsUL71oCQ8PD5RIJIKIo1GhnFcm
-        lXc67tyVtMxsupgoI422Ug9gHpydnTdkKXKbGMEVuYKkUqmK+13/Y/TOXcHBZRot3StWs6/a1taWD4FA
-        sCn35i3djfwCylLkkre3904rAhtuOqtj9+0/EN30tpn0L19Rdc2TpwMEdnZ2i2Pizr8p02j7lXeLKPJY
-        dPyAt1+NI5RKpYzP5/u4uLgkxl9I0Bm/fKG29nZ6rn9RBmAOmzLVXxxYfiO/QFdd84RU6tKutes8xQCm
-        A5j/ubOTQkLDareI/F5+NZn6e3p6yGw2U7mmIgnAREYw0tHRMVDkL/6ekp75tK5e31HxsMqcmCy76ivy
-        O87kfmptJZPZTKyZKWhta+vx8vJy/W2VSZ3ktHyFfL3PJhJu9qWDEZGGI0eP13t6C9vuqu6T7nEtMe8s
-        XA2vG/szs+QnubthuxnAEADTHBwc01etce9d7e5Bzitdyc3DkxKS04gtmG2ehc1v67bXLDtczz9gkR5n
-        b28vcFiwIGPZcoHWxXVNy8GISIqOOU0xZ85SbNw52r0npBnAqP+brcGYx3BZZ2c8dyAwvyo7onHWh/QT
-        VWeleLdJjIwAAAAASUVORK5CYII=
+        vAAADrwBlbxySQAAAzJJREFUOE91k3kwFHAUx1dTzVQkJqOMrSaNyh8NtvJP0RoljCLZTI2bECGmi1nn
+        lMjRkhzrXkeUc8d9HzmWjIrkXkeuiZUlY1a93m9na1LTm/nMb+b3e+/7e+/93o/yh21HFJGjiDpyEtGS
+        rKrIPmQHsgX5x6ScnZ1L8wuLOxcFAlhZWYH19XUQiUQQ8Ch0JY6dMsnJfpltaGhkjL5KCLlsk+1kMBjM
+        +75MPn98Aubm5+Hr8jKsra2BlZ0jhEawoKa+EYaGR0QVlVUJ6H8E+S2yFVEtKCopaed1wfvePuIIU5+n
+        YWFxEWintGYMjU2GnN08Bypr6gQTk1NQU1uXjDFURFyO3B0vb5+S0nKoqq2H5jdtEP0iESqqa3+M8cdB
+        mXrgpjnjWpK9k6vA0tYBgp+Evxsd42+4e3haYaw0EVCJjWdX5OTlQ34RF1IyssDewRGs7ey/NbW0duA5
+        qVlRW1vbBvshfMAMhOfxSd2tbe0luK9MoVKpZ5LSOANpmTmQmZMHUawYkY+PjxOTyaT7+gV4oBOplaRK
+        DQuPTE1Oz4SYODageB/uqVF0dXWvZmTnjhCBVE42sFisSjwgz/W37XG55era0NQC5VU1hA4ZGRkahU6n
+        W+S+LuS9KigGFAIzMzMXdP4lIIWQ28m618v7bvDI6Bj09X+Cjs63PWIBWVnZ0yHhz4ZReYNbVgH+gcFR
+        6KwsCdzF5XLZNBrNXE9PLy4qOpYnWFqC2bk5+ND3sQHPjyGUg3aOTo2YAQ9VAZ9q8dJlE0fcP4yc+LKw
+        ANjx7htW1v04Gxurq6sgFAqhsak5Hs/3EwFpDQ0NJxyY74kp6T04B/P4lMK4BHaWpZV1EEl3emYGljGI
+        BJMMZmZnV01NTfUxVlwqSVVJW+cc54q5BTCuW8I9X3/+Q7+gXhMzxmxZZTXwurqB1E6Ga2BwaCM9g/MY
+        Y8i/Ib0R2zbkkLq6RsoFA6O1i0bGoHteH3ACITYhGUiDSefJsFnb2A6ir4okZpORkVaQl5enq2tqpp3V
+        obfo6RuMYzYQHBIGIU8jIDQ8Etxuu4+h325xxH+MKMshZNbJNz6OqElW8okUEMlHolB+AlVnpXgAx0ph
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="powerCheck.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAzJJREFUOE91k3kwFHAUx1dTzVQkJqOMrSaNyh8NtvJP0RoljCLZTI2bECGmi1nn
+        lMjRkhzrXkeUc8d9HzmWjIrkXkeuiZUlY1a93m9na1LTm/nMb+b3e+/7e+/93o/yh21HFJGjiDpyEtGS
+        rKrIPmQHsgX5x6ScnZ1L8wuLOxcFAlhZWYH19XUQiUQQ8Ch0JY6dMsnJfpltaGhkjL5KCLlsk+1kMBjM
+        +75MPn98Aubm5+Hr8jKsra2BlZ0jhEawoKa+EYaGR0QVlVUJ6H8E+S2yFVEtKCopaed1wfvePuIIU5+n
+        YWFxEWintGYMjU2GnN08Bypr6gQTk1NQU1uXjDFURFyO3B0vb5+S0nKoqq2H5jdtEP0iESqqa3+M8cdB
+        mXrgpjnjWpK9k6vA0tYBgp+Evxsd42+4e3haYaw0EVCJjWdX5OTlQ34RF1IyssDewRGs7ey/NbW0duA5
+        qVlRW1vbBvshfMAMhOfxSd2tbe0luK9MoVKpZ5LSOANpmTmQmZMHUawYkY+PjxOTyaT7+gV4oBOplaRK
+        DQuPTE1Oz4SYODageB/uqVF0dXWvZmTnjhCBVE42sFisSjwgz/W37XG55era0NQC5VU1hA4ZGRkahU6n
+        W+S+LuS9KigGFAIzMzMXdP4lIIWQ28m618v7bvDI6Bj09X+Cjs63PWIBWVnZ0yHhz4ZReYNbVgH+gcFR
+        6KwsCdzF5XLZNBrNXE9PLy4qOpYnWFqC2bk5+ND3sQHPjyGUg3aOTo2YAQ9VAZ9q8dJlE0fcP4yc+LKw
+        ANjx7htW1v04Gxurq6sgFAqhsak5Hs/3EwFpDQ0NJxyY74kp6T04B/P4lMK4BHaWpZV1EEl3emYGljGI
+        BJMMZmZnV01NTfUxVlwqSVVJW+cc54q5BTCuW8I9X3/+Q7+gXhMzxmxZZTXwurqB1E6Ga2BwaCM9g/MY
+        Y8i/Ib0R2zbkkLq6RsoFA6O1i0bGoHteH3ACITYhGUiDSefJsFnb2A6ir4okZpORkVaQl5enq2tqpp3V
+        obfo6RuMYzYQHBIGIU8jIDQ8Etxuu4+h325xxH+MKMshZNbJNz6OqElW8okUEMlHolB+AlVnpXgAx0ph
+        AAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
