--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,6 +121,12 @@
   <data name="bingWallpaper" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\bingWallpaper.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="birthday" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sounds\birthday.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="christmas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sounds\christmas.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="computerRepairCentre" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\computerRepairCentre.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -130,13 +136,22 @@
   <data name="googleChrome" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\googleChrome.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="halloween" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sounds\halloween.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="libreOffice" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\libreOffice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="mozillaFirefox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\mozillaFirefox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="power" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons\power.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="restart" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\restart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="win98shutdown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sounds\win98shutdown.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
