--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -151,11 +151,17 @@
   <data name="libreOffice" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\libreOffice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="microsoftOffice2007" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons\microsoftOffice2007.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="mozillaFirefox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\mozillaFirefox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="mozillaThunderbird" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\mozillaThunderbird.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="nanaZip" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons\nanaZip.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="power" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\power.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
