--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -178,6 +178,9 @@
   <data name="present" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\images\present.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="puffin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\images\puffin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pumpkin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\images\pumpkin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
