--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -169,6 +169,9 @@
   <data name="nanaZip" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\nanaZip.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="nvidiaApp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons\nvidiaApp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pancake" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\images\pancake.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
